@@ -1,3 +1,0 @@
-# sysfs is populated after the event is sent
-ACTION=="add", SUBSYSTEM=="scsi", WAIT_FOR_SYSFS="ioerr_cnt"
-
